--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.11.13",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.10.1",
     "@tanstack/react-query": "^4.20.0",
@@ -20,7 +21,6 @@
     "daisyui": "^2.50.2",
     "dayjs": "^1.11.7",
     "next": "13.1.6",
-    "next-auth": "^4.19.0",
     "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
