--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.11.13",
-    "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.11.0",
     "@tanstack/react-query": "^4.20.0",
     "@trpc/client": "^10.9.0",
@@ -22,7 +21,6 @@
     "daisyui": "^2.50.2",
     "dayjs": "^1.11.7",
     "next": "13.1.6",
-    "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
@@ -30,6 +28,7 @@
     "zod": "^3.20.2"
   },
   "devDependencies": {
+    "@types/eslint": "^8.21.3",
     "@types/node": "^18.11.18",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.26",
