--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "daisyui": "^2.50.2",
     "dayjs": "^1.11.7",
     "next": "13.1.6",
+    "next-cloudinary": "^4.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
